Initial Steps: Error handling, Validation & Small cosmetic changes as well as some minor architecture improvements & tiny refactoring.