@@ -1,15 +1,16 @@
 package com.qs.booking.api.service;
 
-import com.qs.booking.api.dto.external.AccountRequestDto;
-import com.qs.booking.api.dto.external.AccountResponseDto;
+import com.qs.booking.api.dto.external.request.patch.AccountPatchDto;
+import com.qs.booking.api.dto.external.request.post.AccountPostDto;
+import com.qs.booking.api.dto.external.response.AccountResponseDto;
 import com.qs.booking.api.error.unit.AccountNotFoundException;
+import com.qs.booking.api.error.unit.InvalidParameterException;
 import com.qs.booking.api.mapper.AccountDtoMapper;
 import com.qs.booking.store.model.Account;
 import com.qs.booking.store.repository.AccountRepository;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import tools.jackson.databind.JsonNode;
 import tools.jackson.databind.ObjectMapper;
 
 import java.util.Optional;
@@ -21,12 +22,14 @@ public class AccountService {
 
     private final AccountRepository accountRepository;
     private final AccountDtoMapper accountDtoMapper;
-    private final ObjectMapper objectMapper;
 
     public AccountResponseDto fetchAccount(UUID accountId) {
 
         Account fetchedAccount = accountRepository.findById(accountId)
-                .orElseThrow(() -> new AccountNotFoundException("Account with id: %s cannot be fetched.".formatted(accountId)));
+                .orElseThrow(() -> new AccountNotFoundException(
+                        "Account with id: %s cannot be fetched.".formatted(accountId),
+                        "/api/v1/accounts/%s".formatted(accountId)
+                ));
 
         return accountDtoMapper.toDto(fetchedAccount);
     }
@@ -37,11 +40,9 @@ public class AccountService {
     }
 
     @Transactional
-    public AccountResponseDto createAccount(AccountRequestDto accountDto) {
+    public AccountResponseDto createAccount(AccountPostDto accountDto) {
 
-        Account newAccount = accountDtoMapper.toEntity(accountDto);
-
-        validateAccountData(newAccount);
+        Account newAccount = accountDtoMapper.toEntity(accountDto, "api/v1/accounts");
 
         final Account savedAccount = accountRepository.saveAndFlush(newAccount);
 
@@ -49,16 +50,19 @@ public class AccountService {
     }
 
     @Transactional
-    public AccountResponseDto updateAccount(UUID accountId, JsonNode brandNewAccountPart) {
+    public AccountResponseDto updateAccount(UUID accountId, AccountPatchDto accountPatchDto) {
 
-        Account existingAccount = accountRepository.findById(accountId)
-                .orElseThrow(() -> new AccountNotFoundException("Account with id: %s cannot be fetched.".formatted(accountId)));
+        String errorPath = String.format("/api/v1/accounts/%s", accountId);
 
-        objectMapper.readerForUpdating(existingAccount).readValue(brandNewAccountPart);
+        Account fetchedAccount = accountRepository.findById(accountId)
+                .orElseThrow(() -> new AccountNotFoundException(
+                        "Account with id: %s cannot be fetched.".formatted(accountId),
+                        errorPath
+                ));
 
-        validateAccountData(existingAccount);
+        validatePatchRequest(fetchedAccount,  accountPatchDto, errorPath);
 
-        final Account savedAccount = accountRepository.saveAndFlush(existingAccount);
+        final Account savedAccount = accountRepository.saveAndFlush(fetchedAccount);
 
         return accountDtoMapper.toDto(savedAccount);
     }
@@ -67,12 +71,75 @@ public class AccountService {
     public void deleteAccount(UUID accountId) {
 
         accountRepository.findById(accountId)
-                .orElseThrow(() -> new AccountNotFoundException("Account with id: %s cannot be fetched.".formatted(accountId)));
+                .orElseThrow(() -> new AccountNotFoundException(
+                        "Account with id: %s cannot be fetched.".formatted(accountId),
+                        "/api/v1/accounts/%s".formatted(accountId)
+                ));
 
         accountRepository.deleteById(accountId);
     }
 
-    private void validateAccountData(Account account) {
-        // TODO: Create data validation strategy & requirements
+    public void validatePatchRequest(Account account, AccountPatchDto accountPatchDto, String errorPath) {
+
+        accountPatchDto.getEmail().ifPresent((email) -> {
+            if (email.isBlank()) {
+                throw new InvalidParameterException("Invalid email: Entry cannot be empty.", errorPath);
+            } else if (email.matches("^(?=.{1,64}@)[A-Za-z0-9_-]+(\\.[A-Za-z0-9_-]+)*@"
+                    + "[^-][A-Za-z0-9-]+(\\.[A-Za-z0-9-]+)*(\\.[A-Za-z]{2,})$")) {
+                throw new InvalidParameterException("Invalid email: Entry contains invalid characters.", errorPath);
+            } else if (email.length() > 254) {
+                throw new InvalidParameterException("Invalid email: Entry is way to long. Max length is 254.", errorPath);
+            } else if (accountRepository.findByEmail(email).isPresent()) {
+                throw new InvalidParameterException("Invalid email: Email address already exists.", errorPath);
+            } else {
+                account.setEmail(email);
+            }
+        });
+        accountPatchDto.getFirstName().ifPresent((firstName) -> {
+            if (firstName.isBlank()) {
+                throw new InvalidParameterException("Invalid first_name: Entry cannot be empty.", errorPath);
+            } else if (!firstName.matches("^[\\p{L} '-]+$")) {
+                throw new InvalidParameterException("Invalid first_name: Entry contains invalid characters.", errorPath);
+            } else if (firstName.length() < 2) {
+                throw new InvalidParameterException("Invalid first_name: Entry is way to short. Min length is 2.", errorPath);
+            } else if (firstName.length() > 50) {
+                throw new InvalidParameterException("Invalid first_name: Entry is way to long. Max length is 50.", errorPath);
+            } else {
+                account.setFirstName(firstName);
+            }
+        });
+        accountPatchDto.getLastName().ifPresent((lastName) -> {
+            if (lastName.isBlank()) {
+                throw new InvalidParameterException("Invalid last_name: Entry cannot be empty.", errorPath);
+            } else if (!lastName.matches("^[\\p{L} '-]+$")) {
+                throw new InvalidParameterException("Invalid last_name: Entry contains invalid characters.", errorPath);
+            } else if (lastName.length() < 2) {
+                throw new InvalidParameterException("Invalid last_name: Entry is way to short. Min length is 2.", errorPath);
+            } else if (lastName.length() > 50) {
+                throw new InvalidParameterException("Invalid last_name: Entry is way to long. Max length is 50.", errorPath);
+            } else {
+                account.setFirstName(lastName);
+            }
+        });
+        accountPatchDto.getNickname().ifPresent((nickname) -> {
+            if (nickname.isBlank()) {
+                throw new InvalidParameterException("Invalid nickname: Entry cannot be empty.", errorPath);
+            } else if (!nickname.matches("^[a-zA-Z0-9_.-]+$")) {
+                throw new InvalidParameterException("Invalid nickname: Entry contains invalid characters.", errorPath);
+            } else if (nickname.length() < 2) {
+                throw new InvalidParameterException("Invalid nickname: Entry is way to short. Min length is 2.", errorPath);
+            } else if (nickname.length() > 30) {
+                throw new InvalidParameterException("Invalid nickname: Entry is way to long. Max length is 50.", errorPath);
+            } else {
+                account.setNickname(nickname);
+            }
+        });
+        accountPatchDto.getProfilePictureUrl().ifPresent((profilePictureUrl) -> {
+            if (profilePictureUrl.isBlank()) {
+                throw new InvalidParameterException("Invalid profile_picture_url: Entry cannot be empty.", errorPath);
+            } else {
+                account.setProfilePictureUrl(profilePictureUrl);
+            }
+        });
     }
 }
